# CudaRobotics

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  codex_tasks.md  docker-compose.yml  docker-entrypoint.sh  index.html  plan.md  readme.md  related_work.md  value_iteration.avi
.github/workflows/: build.yml
cmake/: Findmujoco.cmake
core/: __init__.py  fixture_promotion_interface.py  planner_selector_interface.py  time_budget_selector_interface.py
docs/: convergence.md  decisions.md  experiments.md  experiments_history.md  helper_promotion.md  interfaces.md  next_actions.md  reproducibility.md
examples/pointcloud/: sample_room.xyz
experiments/: __init__.py  support.py
experiments/data/: benchmark_diff_mppi.csv  benchmark_diff_mppi_dynamic_bicycle.csv  benchmark_diff_mppi_uncertain.csv  manifest.json
experiments/fixture_promotion/: __init__.py  common.py  functional_fixture_promoter.py  oop_fixture_promoter.py  pipeline_fixture_promoter.py
experiments/history/: 20260402T165005+0900_initial_history.json  20260402T171152+0900_delta_view.json  20260402T180652+0900_fixture_promotion.json  20260402T181712+0900_shared_helpers.json  actions_policy.json  helper_policy.json  policy.json
experiments/planner_selection/: __init__.py  functional_selector.py  oop_selector.py  pipeline_selector.py
experiments/time_budget_selection/: __init__.py  functional_budget_selector.py  oop_budget_selector.py  pipeline_budget_selector.py
gif/: comparison_multi_robot_visual.avi  comparison_pf_visual.avi  comparison_value_iteration.avi
include/: autodiff_engine.cuh  benchmark_functions.cuh  contact_2d.cuh  cuda_pointcloud.cuh  diff_cost.cuh  diff_dynamics.cuh  gpu_environments.cuh  gpu_genetic.cuh  gpu_mlp.cuh  gpu_neural_net.cuh  neural_sdf_nav.cuh  parallel_env.cuh  ply_loader.h  rigid_body_2d.cuh
mujoco_models/: inverted_pendulum.xml  reacher.xml
paper/: cudarobotics_systems_paper.md  diff_mppi_7dof_followup.md  diff_mppi_cartpole_followup.md  diff_mppi_dynamic_bicycle_followup.md  diff_mppi_manipulator_followup.md  diff_mppi_mujoco_followup.md  diff_mppi_novelty_followup.md  diff_mppi_paper.md  diff_mppi_rebuttal_note.md  diff_mppi_results.md  diff_mppi_submission_checklist.md  diff_mppi_submission_draft.md  diff_mppi_uncertainty_followup.md  icra_iros_gap_list.md
paper/latex/: .gitignore  Makefile  diff_mppi.tex  references.bib
ros2_ws/src/cuda_robotics/: CMakeLists.txt  package.xml
ros2_ws/src/cuda_robotics/launch/: cuda_dwa.launch.py  cuda_pf.launch.py
ros2_ws/src/cuda_robotics/src/: dwa_node.cu  particle_filter_node.cu
scripts/: check_design_regressions.py  check_scaffold_design_problem.py  compare_design_snapshots.py  design_doctor.py  export_paper_figures_web.py  generate_paper_figures.py  plot_diff_mppi.py  plot_diff_mppi_mechanism.py  plot_gradient_freshness.py  plot_main_figure.py  plot_pareto_frontier.py  refresh_design_docs.py  refresh_design_fixtures.py  render_autodiff_gpu_mlp_summary.py  render_design_actions.py  render_design_convergence.py  render_helper_promotion.py  render_pointcloud_processing_gif.py  render_repro_report.py  run_design_experiments.py  run_repro_suite.py  scaffold_design_problem.py  snapshot_design_experiments.py  summarize_diff_mppi.py  tune_diff_mppi_time_targets.py  validate_design_workflow.py
src/: a_star.cu  aco_tsp.cu  amcl.cu  benchmark_diff_mppi.cu  benchmark_diff_mppi_cartpole.cu  benchmark_diff_mppi_dynamic_bicycle.cu  benchmark_diff_mppi_manipulator.cu  benchmark_diff_mppi_manipulator_7dof.cu  benchmark_diff_mppi_mujoco.cu  benchmark_diff_mppi_mujoco_reacher.cu  benchmark_dwa.cu  benchmark_pf.cu  benchmark_pointcloud.cu  benchmark_rrt.cu  cma_es.cu  comparison_amcl.cu  comparison_astar.cu  comparison_diff_mppi.cu  comparison_dijkstra.cu  comparison_dwa.cu  comparison_dwa_visual.cu  comparison_emcl2.cu  comparison_fastslam.cu  comparison_frenet.cu  comparison_hybrid_astar.cu  comparison_icp.cu  comparison_mppi.cu  comparison_multi_robot.cu  comparison_multi_robot_visual.cu  comparison_neuroevo.cu  comparison_occupancy_grid.cu  comparison_orca.cu  comparison_pf.cu  comparison_pf_visual.cu  comparison_potential_field.cu  comparison_prm.cu  comparison_rrt.cu  comparison_rrt3d.cu  comparison_rrtstar.cu  comparison_sdf_nav.cu  (+51 more)
